tests/ui/rfcs/rfc-2632-const-trait-impl/assoc-type.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/assoc-type.rs:2:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: using `#![feature(effects)]` without enabling next trait solver globally
   |
   = note: the next trait solver must be enabled globally for the effects feature to work correctly
   = help: use `-Znext-solver` to enable

error[E0277]: the trait bound `Param<true>: TyCompat<Add::{synthetic#0}>` is not satisfied
  --> $DIR/assoc-type.rs:41:15
   |
LL |     type Qux: Add;
   |               ^^^ the trait `TyCompat<Add::{synthetic#0}>` is not implemented for `Param<true>`
   |
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | trait Baz where Param<true>: TyCompat<Add::{synthetic#0}> {
   |           +++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
